# BinarySpacePartitioning

./: .gitignore  BSP_Settings.hpp  BinarySpacePartitioning.hpp  CMakeLists.txt  README.md  stevensMathLib.hpp
benchmarks/: CMakeLists.txt  README.md  benchmark_bsp.cpp  benchmark_helpers.hpp
classes/BSP_Tree/: BSP_Tree.hpp
classes/BSP_Tree/classes/BSP_Node/: BSP_Node.hpp
classes/BSP_Tree/classes/BSP_Node/classes/: BSP_Rectangle.hpp  BSP_SplitDirection.hpp
tests/: CMakeLists.txt  README.md  test_bsp_algorithm.cpp  test_bsp_node.cpp  test_bsp_rectangle.cpp  test_bsp_tree.cpp  test_helpers.hpp
